--- a/amazon-clone/package.json
+++ b/amazon-clone/package.json
@@ -8,19 +8,21 @@
   },
   "dependencies": {
     "@heroicons/react": "^1.0.6",
-    "@reduxjs/toolkit": "1.5.0",
-    "@tailwindcss/line-clamp": "^0.2.0",
+    "@reduxjs/toolkit": "^1.5.0",
+    "@tailwindcss/line-clamp": "^0.2.2",
     "firebase": "^8.6.1",
     "firebase-admin": "^9.8.0",
-    "next": "latest",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
-    "react-redux": "7.2.2"
+    "next": "^12.1.0",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-redux": "^7.2.2",
+    "react-responsive-carousel": "^3.2.23",
+    "redux": "^4.1.2"
   },
   "license": "MIT",
   "devDependencies": {
     "autoprefixer": "^10.2.5",
     "postcss": "^8.2.15",
-    "tailwindcss": "^2.1.2"
+    "tailwindcss": "^2.2.19"
   }
 }
