--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "@heroicons/react": "^1.0.6",
     "@reduxjs/toolkit": "^1.5.0",
     "@tailwindcss/line-clamp": "^0.2.2",
-    "firebase": "^8.6.1",
+    "dotenv": "^16.0.0",
+    "firebase": "^8.10.1",
     "firebase-admin": "^9.8.0",
-    "next": "^12.1.0",
-    "react": "^17.0.1",
+    "next": "^12.1.6",
+    "next-auth": "^4.3.4",
+    "react": "^17.0.2",
     "react-currency-formatter": "^1.1.0",
-    "react-dom": "^17.0.1",
+    "react-dom": "^17.0.2",
     "react-redux": "^7.2.2",
     "react-responsive-carousel": "^3.2.23",
     "redux": "^4.1.2"
